Anonymous | Login | 2021-01-26 05:41 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030374 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2018-11-14 15:15 | 2019-06-18 16:27 | ||||
Reporter | kgv | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2015 | OS Version | 64 bit | ||||
Product Version | [OCCT] 7.2.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030374: Visualization, TKOpenGl - activate texture unit Graphic3d_TextureUnit_1 after OpenGl_LayerList::renderTransparent() | ||||||||
Description | OpenGl_LayerList::renderTransparent() uses 2 texture units when OIT enabled, which are unbound in the following way:theOitAccumFbo->ColorTexture (1)->Unbind (aCtx, Graphic3d_TextureUnit_1); theOitAccumFbo->ColorTexture (0)->Unbind (aCtx, Graphic3d_TextureUnit_0); This code is OK within OCCT itself, but combination with external OpenGL renderer (e.g. Qt) might produce unexpected results due to this renderer not switching texture unit to 0 before usage. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|||||||||||||
|
![]() |
|
(0081089) git (administrator) 2018-11-14 15:21 |
Branch CR30374 has been created by kgv. SHA-1: 7654af53ae2a5fac6e01d91e532ec0125c496d52 Detailed log of new commits: Author: kgv Date: Wed Nov 14 15:15:04 2018 +0300 0030374: Visualization, TKOpenGl - activate texture unit Graphic3d_TextureUnit_1 after OpenGl_LayerList::renderTransparent() |
(0081090) kgv (developer) 2018-11-14 15:22 |
Please take the patch, testing is not needed. |
(0081143) git (administrator) 2018-11-18 11:53 |
Branch CR30374 has been deleted by inv. SHA-1: 7654af53ae2a5fac6e01d91e532ec0125c496d52 |
![]() |
|||
occt: master ce1c28b8
Timestamp: 2018-11-14 12:15:04 Author: kgv Committer: apn [ Details ] [ Diff ] |
0030374: Visualization, TKOpenGl - activate texture unit Graphic3d_TextureUnit_1 after OpenGl_LayerList::renderTransparent() | ||
mod - src/OpenGl/OpenGl_LayerList.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-11-14 15:15 | kgv | New Issue | |
2018-11-14 15:15 | kgv | Assigned To | => kgv |
2018-11-14 15:15 | kgv | File Added: cadass_manip_oit_KO.png | |
2018-11-14 15:16 | kgv | Relationship added | related to 0030372 |
2018-11-14 15:16 | kgv | Relationship replaced | child of 0030372 |
2018-11-14 15:21 | git | Note Added: 0081089 | |
2018-11-14 15:22 | kgv | Note Added: 0081090 | |
2018-11-14 15:22 | kgv | Assigned To | kgv => bugmaster |
2018-11-14 15:22 | kgv | Severity | minor => trivial |
2018-11-14 15:22 | kgv | Status | new => resolved |
2018-11-14 15:22 | kgv | Status | resolved => reviewed |
2018-11-14 15:26 | kgv | Relationship added | child of 0027925 |
2018-11-14 15:26 | kgv | Product Version | 7.3.0 => 7.2.0 |
2018-11-14 15:29 | apn | Test case number | => Not needed |
2018-11-14 15:29 | apn | Status | reviewed => tested |
2018-11-18 03:30 | apn | Changeset attached | => occt master ce1c28b8 |
2018-11-18 03:30 | apn | Assigned To | bugmaster => apn |
2018-11-18 03:30 | apn | Status | tested => verified |
2018-11-18 03:30 | apn | Resolution | open => fixed |
2018-11-18 11:53 | git | Note Added: 0081143 | |
2019-06-18 16:27 | kgv | Relationship added | related to 0030748 |
Copyright © 2000 - 2021 MantisBT Team |